feat: front-end and link socket.io

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,15 @@
-<!--index.handlebars-->
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Chatty</title>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="../public/index.js"></script>
   </head>
   <body>
     <h1>Socket.io</h1>
+    <p>maaaewea</p>
   </body>
 </html>
+
