--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Chatty</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="socket.io/socket.io.js"></script>
-    <script src="/public/index.js"></script>
-  </head>
-  <body>
-    <h1>Socket.io</h1>
-    <p>maaaewea</p>
-  </body>
-</html>
 
+<head>
+  <meta charset="utf-8">
+  <title>Chatty</title>
+  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="../public/index.js"></script>
+  <link href='https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css'>
+  </link>
+  <link href='/public/index.css' rel='stylesheet' type='text/css'>
+  </link>
+</head>
+
+<body>
+  <form class="username-form">
+      <input id="username-input" placeholder="Username"></input>
+      <button id="create-user-btn">Join Chat</button>
+    </form>
+</body>
+
+</html>
