--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,9 +15,33 @@
 
 <body>
   <form class="username-form">
-      <input id="username-input" placeholder="Username"></input>
-      <button id="create-user-btn">Join Chat</button>
-    </form>
+    <input id="username-input" placeholder="Username"></input>
+    <button id="create-user-btn">Join Chat</button>
+  </form>
+
+  <div class="main-container">
+    <div class="channels-and-users-online-container">
+      <h1 class="brand">Make Chat</h1>
+      <div class="channels">
+        <h2 class="channels-label">Channels</h2>
+        <div class="new-channel-form"><input id="new-channel-input" placeholder="New Channel" /><button
+            id="new-channel-btn">Create</button></div>
+        <div class="channel-current">General</div>
+      </div>
+      <h2>Online Users</h2>
+      <div class="users-online"></div>
+    </div>
+    <div class="chat-container">
+      <div class="chat-container-fluid">
+        <div class="message-container">
+          <h2>Messages</h2>
+        </div>
+        <div class="text-chat-divide"></div>
+        <div class="chat-box"><textarea id="chat-input" placeholder="Type a message"></textarea><button class="btn"
+            id="send-chat-btn">Send</button></div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
