--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,6 +30,7 @@
       </div>
       <h2>Online Users</h2>
       <div class="users-online"></div>
+      <button id="logout-btn">Logout</button>
     </div>
     <div class="chat-container">
       <div class="chat-container-fluid">
